--- a/index.html
+++ b/index.html
@@ -38,122 +38,122 @@
       </div>
     </div>
     <div class="stones">
-      <img class="stone" data-index="1" src="/images/stone-element/stone_1.svg" />
-      <img class="stone" data-index="2" src="/images/stone-element/stone_2.svg" />
-      <img class="stone" data-index="3" src="/images/stone-element/stone_3.svg" />
-      <img class="stone" data-index="4" src="/images/stone-element/stone_4.svg" />
-      <img class="stone" data-index="5" src="/images/stone-element/stone_5.svg" />
-      <img class="stone" data-index="6" src="/images/stone-element/stone_6.svg" />
-      <img class="stone" data-index="7" src="/images/stone-element/stone_7.svg" />
-      <img class="stone" data-index="8" src="/images/stone-element/stone_8.svg" />
-      <img class="stone" data-index="9" src="/images/stone-element/stone_9.svg" />
-      <img class="stone" data-index="10" src="/images/stone-element/stone_10.svg" />
-      <img class="stone" data-index="11" src="/images/stone-element/stone_11.svg" />
-      <img class="stone" data-index="12" src="/images/stone-element/stone_12.svg" />
-      <img class="stone" data-index="13" src="/images/stone-element/stone_13.svg" />
-      <img class="stone" data-index="14" src="/images/stone-element/stone_14.svg" />
-      <img class="stone" data-index="15" src="/images/stone-element/stone_15.svg" />
-      <img class="stone" data-index="16" src="/images/stone-element/stone_16.svg" />
-      <img class="stone" data-index="17" src="/images/stone-element/stone_17.svg" />
-      <img class="stone" data-index="18" src="/images/stone-element/stone_18.svg" />
-      <img class="stone" data-index="19" src="/images/stone-element/stone_19.svg" />
-      <img class="stone" data-index="20" src="/images/stone-element/stone_20.svg" />
-      <img class="stone" data-index="21" src="/images/stone-element/stone_21.svg" />
+      <img class="stone" data-index="1" src="./images/stone-element/stone_1.svg" />
+      <img class="stone" data-index="2" src="./images/stone-element/stone_2.svg" />
+      <img class="stone" data-index="3" src="./images/stone-element/stone_3.svg" />
+      <img class="stone" data-index="4" src="./images/stone-element/stone_4.svg" />
+      <img class="stone" data-index="5" src="./images/stone-element/stone_5.svg" />
+      <img class="stone" data-index="6" src="./images/stone-element/stone_6.svg" />
+      <img class="stone" data-index="7" src="./images/stone-element/stone_7.svg" />
+      <img class="stone" data-index="8" src="./images/stone-element/stone_8.svg" />
+      <img class="stone" data-index="9" src="./images/stone-element/stone_9.svg" />
+      <img class="stone" data-index="10" src="./images/stone-element/stone_10.svg" />
+      <img class="stone" data-index="11" src="./images/stone-element/stone_11.svg" />
+      <img class="stone" data-index="12" src="./images/stone-element/stone_12.svg" />
+      <img class="stone" data-index="13" src="./images/stone-element/stone_13.svg" />
+      <img class="stone" data-index="14" src="./images/stone-element/stone_14.svg" />
+      <img class="stone" data-index="15" src="./images/stone-element/stone_15.svg" />
+      <img class="stone" data-index="16" src="./images/stone-element/stone_16.svg" />
+      <img class="stone" data-index="17" src="./images/stone-element/stone_17.svg" />
+      <img class="stone" data-index="18" src="./images/stone-element/stone_18.svg" />
+      <img class="stone" data-index="19" src="./images/stone-element/stone_19.svg" />
+      <img class="stone" data-index="20" src="./images/stone-element/stone_20.svg" />
+      <img class="stone" data-index="21" src="./images/stone-element/stone_21.svg" />
     </div>
     <div class="parallax-wrap">
-      <span value="-5"><img src="/images/parallax-element/bg_1.svg" /></span>
-      <span value="3"><img src="/images/parallax-element/bg_2.svg" /></span>
-      <span value="5"><img src="/images/parallax-element/bg_3.svg" /></span>
-      <span value="-3"><img src="/images/parallax-element/bg_4.svg" /></span>
-      <span value="-5"><img src="/images/parallax-element/bg_5.svg" /></span>
-      <span value="3"><img src="/images/parallax-element/bg_6.svg" /></span>
-      <span value="5"><img src="/images/parallax-element/bg_7.svg" /></span>
-      <span value="-1"><img src="/images/parallax-element/bg_8.png" /></span>
-      <span value="-5"><img src="/images/parallax-element/bg_9.svg" /></span>
-      <span value="3"><img src="/images/parallax-element/bg_10.svg" /></span>
-      <span value="5"><img src="/images/parallax-element/bg_11.svg" /></span>
-      <span value="-3"><img src="/images/parallax-element/bg_12.svg" /></span>
-      <span value="-5"><img src="/images/parallax-element/bg_13.svg" /></span>
-      <span value="3"><img src="/images/parallax-element/bg_14.svg" /></span>
-      <span value="5"><img src="/images/parallax-element/bg_15.svg" /></span>
-      <span value="-3"><img src="/images/parallax-element/bg_16.svg" /></span>
-      <span value="-5"><img src="/images/parallax-element/bg_17.svg" /></span>
-      <span value="3"><img src="/images/parallax-element/bg_18.svg" /></span>
-      <span value="5"><img src="/images/parallax-element/bg_19.svg" /></span>
-      <span value="-3"><img src="/images/parallax-element/bg_20.svg" /></span>
-      <span value="-5"><img src="/images/parallax-element/bg_21.svg" /></span>
-      <span value="3"><img src="/images/parallax-element/bg_22.png" /></span>
-      <span value="6"><img src="/images/parallax-element/bg_23.svg" /></span>
-      <span value="-3"><img src="/images/parallax-element/bg_24.svg" /></span>
-      <span value="-4"><img src="/images/parallax-element/bg_25.svg" /></span>
-      <span value="3"><img src="/images/parallax-element/bg_26.svg" /></span>
-      <span value="4"><img src="/images/parallax-element/bg_27.svg" /></span>
-      <span value="-2"><img src="/images/parallax-element/bg_28.svg" /></span>
-      <span value="-5"><img src="/images/parallax-element/bg_29.png" /></span>
-      <span value="3"><img src="/images/parallax-element/bg_30.svg" /></span>
-      <span value="4"><img src="/images/parallax-element/bg_31.svg" /></span>
-      <span value="-2"><img src="/images/parallax-element/bg_32.svg" /></span>
-      <span value="-5"><img src="/images/parallax-element/bg_33.svg" /></span>
-      <span value="3"><img src="/images/parallax-element/bg_34.png" /></span>
-      <span value="5"><img src="/images/parallax-element/bg_35.svg" /></span>
-      <span value="-4"><img src="/images/parallax-element/bg_36.svg" /></span>
-      <span value="-5"><img src="/images/parallax-element/bg_37.svg" /></span>
-      <span value="2"><img src="/images/parallax-element/bg_38.svg" /></span>
-      <span value="4"><img src="/images/parallax-element/bg_39.svg" /></span>
-      <span value="-3"><img src="/images/parallax-element/bg_40.svg" /></span>
-      <span value="-5"><img src="/images/parallax-element/bg_41.svg" /></span>
-      <span value="2"><img src="/images/parallax-element/bg_42.svg" /></span>
-      <span value="3"><img src="/images/parallax-element/bg_43.svg" /></span>
-      <span value="-3"><img src="/images/parallax-element/bg_44.svg" /></span>
-      <span value="-4"><img src="/images/parallax-element/bg_45.svg" /></span>
-      <span value="4"><img src="/images/parallax-element/bg_46.svg" /></span>
-      <span value="5"><img src="/images/parallax-element/bg_47.svg" /></span>
-      <span value="-3"><img src="/images/parallax-element/bg_48.svg" /></span>
-      <span value="-5"><img src="/images/parallax-element/bg_49.svg" /></span>
-      <span value="3"><img src="/images/parallax-element/bg_50.svg" /></span>
-      <span value="5"><img src="/images/parallax-element/bg_51.svg" /></span>
-      <span value="-2"><img src="/images/parallax-element/bg_52.svg" /></span>
-      <span value="-4"><img src="/images/parallax-element/bg_53.svg" /></span>
-      <span value="3"><img src="/images/parallax-element/bg_54.svg" /></span>
-      <span value="5"><img src="/images/parallax-element/bg_55.svg" /></span>
-      <span value="-3"><img src="/images/parallax-element/bg_56.svg" /></span>
-      <span value="-5"><img src="/images/parallax-element/bg_57.svg" /></span>
-      <span value="2"><img src="/images/parallax-element/bg_58.svg" /></span>
-      <span value="4"><img src="/images/parallax-element/bg_59.svg" /></span>
-      <span value="-3"><img src="/images/parallax-element/bg_60.svg" /></span>
-      <span value="-4"><img src="/images/parallax-element/bg_61.svg" /></span>
-      <span value="3"><img src="/images/parallax-element/bg_62.svg" /></span>
-      <span value="5"><img src="/images/parallax-element/bg_63.svg" /></span>
-      <span value="-3"><img src="/images/parallax-element/bg_64.svg" /></span>
-      <span value="-5"><img src="/images/parallax-element/bg_65.svg" /></span>
-      <span value="3"><img src="/images/parallax-element/bg_66.svg" /></span>
-      <span value="4"><img src="/images/parallax-element/bg_67.svg" /></span>
-      <span value="-2"><img src="/images/parallax-element/bg_68.svg" /></span>
-      <span value="-3"><img src="/images/parallax-element/bg_69.svg" /></span>
-      <span value="4"><img src="/images/parallax-element/bg_70.svg" /></span>
-      <span value="5"><img src="/images/parallax-element/bg_71.svg" /></span>
-      <span value="-2"><img src="/images/parallax-element/bg_72.svg" /></span>
-      <span value="-4"><img src="/images/parallax-element/bg_73.svg" /></span>
-      <span value="3"><img src="/images/parallax-element/bg_74.svg" /></span>
-      <span value="5"><img src="/images/parallax-element/bg_75.svg" /></span>
-      <span value="-2"><img src="/images/parallax-element/bg_76.png" /></span>
-      <span value="-3"><img src="/images/parallax-element/bg_77.png" /></span>
-      <span value="2"><img src="/images/parallax-element/bg_78.svg" /></span>
-      <span value="4"><img src="/images/parallax-element/bg_79.svg" /></span>
-      <span value="-3"><img src="/images/parallax-element/bg_80.svg" /></span>
-      <span value="-5"><img src="/images/parallax-element/bg_81.svg" /></span>
-      <span value="2"><img src="/images/parallax-element/bg_82.svg" /></span>
-      <span value="4"><img src="/images/parallax-element/bg_83.svg" /></span>
-      <span value="-4"><img src="/images/parallax-element/bg_84.svg" /></span>
-      <span value="-5"><img src="/images/parallax-element/bg_85.svg" /></span>
-      <span value="3"><img src="/images/parallax-element/bg_86.svg" /></span>
-      <span value="5"><img src="/images/parallax-element/bg_87.png" /></span>
-      <span value="-2"><img src="/images/parallax-element/bg_88.svg" /></span>
-      <span value="-4"><img src="/images/parallax-element/bg_89.svg" /></span>
-      <span value="3"><img src="/images/parallax-element/bg_90.svg" /></span>
-      <span value="5"><img src="/images/parallax-element/bg_91.svg" /></span>
-      <span value="-3"><img src="/images/parallax-element/bg_92.svg" /></span>
-      <span value="-5"><img src="/images/parallax-element/bg_93.svg" /></span>
+      <span value="-5"><img src="./images/parallax-element/bg_1.svg" /></span>
+      <span value="3"><img src="./images/parallax-element/bg_2.svg" /></span>
+      <span value="5"><img src="./images/parallax-element/bg_3.svg" /></span>
+      <span value="-3"><img src="./images/parallax-element/bg_4.svg" /></span>
+      <span value="-5"><img src="./images/parallax-element/bg_5.svg" /></span>
+      <span value="3"><img src="./images/parallax-element/bg_6.svg" /></span>
+      <span value="5"><img src="./images/parallax-element/bg_7.svg" /></span>
+      <span value="-1"><img src="./images/parallax-element/bg_8.png" /></span>
+      <span value="-5"><img src="./images/parallax-element/bg_9.svg" /></span>
+      <span value="3"><img src="./images/parallax-element/bg_10.svg" /></span>
+      <span value="5"><img src="./images/parallax-element/bg_11.svg" /></span>
+      <span value="-3"><img src="./images/parallax-element/bg_12.svg" /></span>
+      <span value="-5"><img src="./images/parallax-element/bg_13.svg" /></span>
+      <span value="3"><img src="./images/parallax-element/bg_14.svg" /></span>
+      <span value="5"><img src="./images/parallax-element/bg_15.svg" /></span>
+      <span value="-3"><img src="./images/parallax-element/bg_16.svg" /></span>
+      <span value="-5"><img src="./images/parallax-element/bg_17.svg" /></span>
+      <span value="3"><img src="./images/parallax-element/bg_18.svg" /></span>
+      <span value="5"><img src="./images/parallax-element/bg_19.svg" /></span>
+      <span value="-3"><img src="./images/parallax-element/bg_20.svg" /></span>
+      <span value="-5"><img src="./images/parallax-element/bg_21.svg" /></span>
+      <span value="3"><img src="./images/parallax-element/bg_22.png" /></span>
+      <span value="6"><img src="./images/parallax-element/bg_23.svg" /></span>
+      <span value="-3"><img src="./images/parallax-element/bg_24.svg" /></span>
+      <span value="-4"><img src="./images/parallax-element/bg_25.svg" /></span>
+      <span value="3"><img src="./images/parallax-element/bg_26.svg" /></span>
+      <span value="4"><img src="./images/parallax-element/bg_27.svg" /></span>
+      <span value="-2"><img src="./images/parallax-element/bg_28.svg" /></span>
+      <span value="-5"><img src="./images/parallax-element/bg_29.png" /></span>
+      <span value="3"><img src="./images/parallax-element/bg_30.svg" /></span>
+      <span value="4"><img src="./images/parallax-element/bg_31.svg" /></span>
+      <span value="-2"><img src="./images/parallax-element/bg_32.svg" /></span>
+      <span value="-5"><img src="./images/parallax-element/bg_33.svg" /></span>
+      <span value="3"><img src="./images/parallax-element/bg_34.png" /></span>
+      <span value="5"><img src="./images/parallax-element/bg_35.svg" /></span>
+      <span value="-4"><img src="./images/parallax-element/bg_36.svg" /></span>
+      <span value="-5"><img src="./images/parallax-element/bg_37.svg" /></span>
+      <span value="2"><img src="./images/parallax-element/bg_38.svg" /></span>
+      <span value="4"><img src="./images/parallax-element/bg_39.svg" /></span>
+      <span value="-3"><img src="./images/parallax-element/bg_40.svg" /></span>
+      <span value="-5"><img src="./images/parallax-element/bg_41.svg" /></span>
+      <span value="2"><img src="./images/parallax-element/bg_42.svg" /></span>
+      <span value="3"><img src="./images/parallax-element/bg_43.svg" /></span>
+      <span value="-3"><img src="./images/parallax-element/bg_44.svg" /></span>
+      <span value="-4"><img src="./images/parallax-element/bg_45.svg" /></span>
+      <span value="4"><img src="./images/parallax-element/bg_46.svg" /></span>
+      <span value="5"><img src="./images/parallax-element/bg_47.svg" /></span>
+      <span value="-3"><img src="./images/parallax-element/bg_48.svg" /></span>
+      <span value="-5"><img src="./images/parallax-element/bg_49.svg" /></span>
+      <span value="3"><img src="./images/parallax-element/bg_50.svg" /></span>
+      <span value="5"><img src="./images/parallax-element/bg_51.svg" /></span>
+      <span value="-2"><img src="./images/parallax-element/bg_52.svg" /></span>
+      <span value="-4"><img src="./images/parallax-element/bg_53.svg" /></span>
+      <span value="3"><img src="./images/parallax-element/bg_54.svg" /></span>
+      <span value="5"><img src="./images/parallax-element/bg_55.svg" /></span>
+      <span value="-3"><img src="./images/parallax-element/bg_56.svg" /></span>
+      <span value="-5"><img src="./images/parallax-element/bg_57.svg" /></span>
+      <span value="2"><img src="./images/parallax-element/bg_58.svg" /></span>
+      <span value="4"><img src="./images/parallax-element/bg_59.svg" /></span>
+      <span value="-3"><img src="./images/parallax-element/bg_60.svg" /></span>
+      <span value="-4"><img src="./images/parallax-element/bg_61.svg" /></span>
+      <span value="3"><img src="./images/parallax-element/bg_62.svg" /></span>
+      <span value="5"><img src="./images/parallax-element/bg_63.svg" /></span>
+      <span value="-3"><img src="./images/parallax-element/bg_64.svg" /></span>
+      <span value="-5"><img src="./images/parallax-element/bg_65.svg" /></span>
+      <span value="3"><img src="./images/parallax-element/bg_66.svg" /></span>
+      <span value="4"><img src="./images/parallax-element/bg_67.svg" /></span>
+      <span value="-2"><img src="./images/parallax-element/bg_68.svg" /></span>
+      <span value="-3"><img src="./images/parallax-element/bg_69.svg" /></span>
+      <span value="4"><img src="./images/parallax-element/bg_70.svg" /></span>
+      <span value="5"><img src="./images/parallax-element/bg_71.svg" /></span>
+      <span value="-2"><img src="./images/parallax-element/bg_72.svg" /></span>
+      <span value="-4"><img src="./images/parallax-element/bg_73.svg" /></span>
+      <span value="3"><img src="./images/parallax-element/bg_74.svg" /></span>
+      <span value="5"><img src="./images/parallax-element/bg_75.svg" /></span>
+      <span value="-2"><img src="./images/parallax-element/bg_76.png" /></span>
+      <span value="-3"><img src="./images/parallax-element/bg_77.png" /></span>
+      <span value="2"><img src="./images/parallax-element/bg_78.svg" /></span>
+      <span value="4"><img src="./images/parallax-element/bg_79.svg" /></span>
+      <span value="-3"><img src="./images/parallax-element/bg_80.svg" /></span>
+      <span value="-5"><img src="./images/parallax-element/bg_81.svg" /></span>
+      <span value="2"><img src="./images/parallax-element/bg_82.svg" /></span>
+      <span value="4"><img src="./images/parallax-element/bg_83.svg" /></span>
+      <span value="-4"><img src="./images/parallax-element/bg_84.svg" /></span>
+      <span value="-5"><img src="./images/parallax-element/bg_85.svg" /></span>
+      <span value="3"><img src="./images/parallax-element/bg_86.svg" /></span>
+      <span value="5"><img src="./images/parallax-element/bg_87.png" /></span>
+      <span value="-2"><img src="./images/parallax-element/bg_88.svg" /></span>
+      <span value="-4"><img src="./images/parallax-element/bg_89.svg" /></span>
+      <span value="3"><img src="./images/parallax-element/bg_90.svg" /></span>
+      <span value="5"><img src="./images/parallax-element/bg_91.svg" /></span>
+      <span value="-3"><img src="./images/parallax-element/bg_92.svg" /></span>
+      <span value="-5"><img src="./images/parallax-element/bg_93.svg" /></span>
       <div class="sign">
         <div class="greeting">
           <div class="circles">
