--- a/top.html
+++ b/top.html
@@ -29,27 +29,27 @@
       <div class="pocket">
         <h3>Pocket</h3>
         <div id="stoneContainer2">
-          <img class="stone" src="/images/stone-element/stone_1.svg" />
-          <img class="stone" src="/images/stone-element/stone_2.svg" />
-          <img class="stone" src="/images/stone-element/stone_3.svg" />
-          <img class="stone" src="/images/stone-element/stone_4.svg" />
-          <img class="stone" src="/images/stone-element/stone_5.svg" />
-          <img class="stone" src="/images/stone-element/stone_6.svg" />
-          <img class="stone" src="/images/stone-element/stone_7.svg" />
-          <img class="stone" src="/images/stone-element/stone_8.svg" />
-          <img class="stone" src="/images/stone-element/stone_9.svg" />
-          <img class="stone" src="/images/stone-element/stone_10.svg" />
-          <img class="stone" src="/images/stone-element/stone_11.svg" />
-          <img class="stone" src="/images/stone-element/stone_12.svg" />
-          <img class="stone" src="/images/stone-element/stone_13.svg" />
-          <img class="stone" src="/images/stone-element/stone_14.svg" />
-          <img class="stone" src="/images/stone-element/stone_15.svg" />
-          <img class="stone" src="/images/stone-element/stone_16.svg" />
-          <img class="stone" src="/images/stone-element/stone_17.svg" />
-          <img class="stone" src="/images/stone-element/stone_18.svg" />
-          <img class="stone" src="/images/stone-element/stone_19.svg" />
-          <img class="stone" src="/images/stone-element/stone_20.svg" />
-          <img class="stone" src="/images/stone-element/stone_21.svg" />
+          <img class="stone" src="./images/stone-element/stone_1.svg" />
+          <img class="stone" src="./images/stone-element/stone_2.svg" />
+          <img class="stone" src="./images/stone-element/stone_3.svg" />
+          <img class="stone" src="./images/stone-element/stone_4.svg" />
+          <img class="stone" src="./images/stone-element/stone_5.svg" />
+          <img class="stone" src="./images/stone-element/stone_6.svg" />
+          <img class="stone" src="./images/stone-element/stone_7.svg" />
+          <img class="stone" src="./images/stone-element/stone_8.svg" />
+          <img class="stone" src="./images/stone-element/stone_9.svg" />
+          <img class="stone" src="./images/stone-element/stone_10.svg" />
+          <img class="stone" src="./images/stone-element/stone_11.svg" />
+          <img class="stone" src="./images/stone-element/stone_12.svg" />
+          <img class="stone" src="./images/stone-element/stone_13.svg" />
+          <img class="stone" src="./images/stone-element/stone_14.svg" />
+          <img class="stone" src="./images/stone-element/stone_15.svg" />
+          <img class="stone" src="./images/stone-element/stone_16.svg" />
+          <img class="stone" src="./images/stone-element/stone_17.svg" />
+          <img class="stone" src="./images/stone-element/stone_18.svg" />
+          <img class="stone" src="./images/stone-element/stone_19.svg" />
+          <img class="stone" src="./images/stone-element/stone_20.svg" />
+          <img class="stone" src="./images/stone-element/stone_21.svg" />
         </div>
       </div>
     </div>
