--- a/top.html
+++ b/top.html
@@ -15,7 +15,24 @@
       <button id="closeCanvasBtn">Close</button>
       <button id="goDown">Go Down</button>
     </div>
-    <div id="collection"></div>
+    <div id="collection">
+      <div class="preloaded-image" style="position: absolute; top: 200px; left: 50px">
+        <img src="./images/preloaded/artwork_1.png" alt="Preloaded Image 1" width="200px" />
+        <div class="tooltip" style="display: none">All stones have luck built in.</div>
+      </div>
+      <div class="preloaded-image" style="position: absolute; top: 560px; left: 1200px">
+        <img src="./images/preloaded/artwork_2.png" alt="Preloaded Image 1" width="200px" />
+        <div class="tooltip" style="display: none">All stones have luck built in.</div>
+      </div>
+      <div class="preloaded-image" style="position: absolute; top: 40px; left: 560px">
+        <img src="./images/preloaded/artwork_3.png" alt="Preloaded Image 1" width="200px" />
+        <div class="tooltip" style="display: none">All stones have luck built in.</div>
+      </div>
+      <div class="preloaded-image" style="position: absolute; top: 440px; left: 1600px">
+        <img src="./images/preloaded/artwork_4.png" alt="Preloaded Image 1" width="200px" />
+        <div class="tooltip" style="display: none">All stones have luck built in.</div>
+      </div>
+    </div>
     <div id="canvasPocket">
       <div id="canvasContainer">
         <h3>Stone Stacker</h3>
