1014 end of today's sprint

--- a/top.html
+++ b/top.html
@@ -22,15 +22,15 @@
       </div>
       <div class="preloaded-image" style="position: absolute; top: 560px; left: 1200px">
         <img src="./images/preloaded/artwork_2.png" alt="Preloaded Image 1" width="200px" />
-        <div class="tooltip" style="display: none">All stones have luck built in.</div>
+        <div class="tooltip" style="display: none">코딩을 공부하며 오랜만에 배움의 즐거움을 느꼈다. 이 즐거움 오래 가기를 바라며...</div>
       </div>
       <div class="preloaded-image" style="position: absolute; top: 40px; left: 560px">
         <img src="./images/preloaded/artwork_3.png" alt="Preloaded Image 1" width="200px" />
-        <div class="tooltip" style="display: none">All stones have luck built in.</div>
+        <div class="tooltip" style="display: none">산길을 가다보면 굽이굽이 작고 못생긴 돌 조각으로 쌓은 탑 있네 누가 쌓았을까 산처럼 커야 한다고 백장암 삼층탑처럼 높아야 한다고 믿었던 나에게 들패랭이 같은 용담꽃 같은 온 천지 들꽃 같은 애기 돌탑 복효근 『아기돌탑』 중에서</div>
       </div>
       <div class="preloaded-image" style="position: absolute; top: 440px; left: 1600px">
         <img src="./images/preloaded/artwork_4.png" alt="Preloaded Image 1" width="200px" />
-        <div class="tooltip" style="display: none">All stones have luck built in.</div>
+        <div class="tooltip" style="display: none">These pile of stones each bear a secret.</div>
       </div>
     </div>
     <div id="canvasPocket">
