1020 친구들한테 배포하긔

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <title>The Ascent</title>
   </head>
   <body>
-    <a href="top.html" class="button">Climb to the top</a>
+    <a href="top.html" class="button">To the top</a>
     <div class="pocket">
       <h3>Pocket</h3>
+      <p><small>click to add!</small></p>
       <div class="stoneContainer">
         <div class="container" data-index="1"></div>
         <div class="container" data-index="2"></div>
@@ -163,19 +164,54 @@
             <div></div>
           </div>
           <h2>Ascend a Website</h2>
-          <div class="language-switcher">
+          <!-- <div class="language-switcher">
             <button id="lang-ko">[ 한국어 ]</button>
             <button id="lang-en">[ English ]</button>
+          </div> -->
+          <div class="intro">
+            <h3>Scroll Up</h3>
+            <p id="p1">
+              이 사이트는 위가 아닌 아래에서부터 시작합니다. 그러니 ‘스크롤 다운’ 대신, ‘스크롤 업’.<br />
+              등산하듯 올라가 보세요. 올라가는 길에 돌을 수집하고, 정상에 도달하면 자신만의 탑을 <br />
+              쌓을 수 있습니다. 평소와 다른 하나의 행동을 통해, 디지털 공간을 다시 인식해 보세요.
+            </p>
           </div>
-          <p id="p1">등산 좋아하시나요? Ascend a Website는 끊임없이 스크롤 다운하는 콘텐츠에서의 디지털 도피처입니다. 앱을 무심코 켜고 들어가서, 콘텐츠를 끊임없이 스크롤 다운했더니 어느새 해가 뉘엿뉘엿 저물어 있는 경험을 해본 적이 있을 겁니다. 우리가 매일 접속하는 앱은 여러 가지 정보와 재미를 제공하지만, 그들이 만들어 놓은 끝없는 내리막길은 우리의 일상을 조금씩 잠식해 가고 있습니다. 우리에게 익숙한 스크롤 다운 개념과 반대되는 공간은 어떤 모습일까요?</p>
-          <p id="p2">등산은 중력을 거슬러 정상을 향해 올라가는 고생스러운 일이지만, 그 끝에서 일상의 번잡함에서 벗어나 잠시 숨을 고르고 뿌듯함을 느낄 수 있습니다. 정상에는 이 길을 다녀간 사람들이 방명록처럼 쌓아놓은 돌탑들이 빼곡히 서 있습니다. 어떤 의미가 깃들어 있는지 알 수 없지만, 오랜 시간 공들인 만큼 저마다의 간절함이 담겨있다는 것을 알 수 있습니다.</p>
-          <p id="p3">사용자 중심의 편리함을 강조하는 디지털 공간 속에서 등산이라는 행동을 대입해 보면 어떨까요. 우리에게 익숙한 스크롤 다운 방식이 아닌, 그 반대의 여정입니다. 사용자는 오르며 돌을 모으고, 정상에서 그 돌로 자신만의 탑을 쌓습니다. 어떤 돌을 선택하고 어떤 방식으로 탑을 쌓을지는 전적으로 방문자의 몫입니다. 이러한 방식으로 사이트를 다녀간 사람들은 방문의 흔적을 남기고 느슨하게 연결될 수 있습니다.</p>
-          <p>Website created by <a a href="https://youjung-noh.com/">Youjung Noh</a></p>
+          <div class="intro">
+            <h3>In a Scroll Down World</h3>
+            <p id="p2">
+              무심코 핸드폰을 켜고 끝없이 스크롤을 내리다 해가 뉘엿뉘엿 지는 <br />
+              하루 끝을 맞이한 경험, 모두 있을 겁니다. 작은 화면 속 세상은 우리에게<br />
+              수많은 여러 가지 정보와 재미를 제공하지만, 그것이 만들어놓은 <br />
+              끝없는 내리막길은 우리의 일상을 잠식해 가고 있죠. 내려가는 것은 참 쉬운데, <br />
+              그 작은 화면 속에서 좀처럼 올라가진 않습니다.
+            </p>
+          </div>
+          <div class="intro">
+            <h3>Ascend</h3>
+            <p id="p3">
+              그러나 등산을 떠올려보세요. 등산은 중력을 거슬러 위로 올라가는 일입니다. <br />
+              그야말로 사서 고생하는 일이죠. 하지만 정상에 오른 자만 볼 수 있는 절경과,<br />
+              그들이 방명록처럼 남긴 빼곡한 돌탑을 바라보면 일종의 활력이 느껴지곤 합니다. <br />
+              애써 오른 행위 끝에야만 느낄 수 있는 무언가 가요.
+            </p>
+          </div>
+          <div class="intro">
+            <h3>See you up there!</h3>
+            <p id="p4">
+              이 사이트를 애써 ‘올라가'보세요. 올라가는 길에 돌도 주워보시고요. <br />
+              ‘스크롤 다운'하는 일상 속에서 ‘스크롤 업'을 해낸 당신만의 경험을과 <br />
+              생기(生氣)를 돌탑으로 표현해 남겨주세요. 우리 저기 위에서 만납시다. 
+            </p>
+          </div>
+          <p class="intro">
+            <small>Website created by <a a href="https://youjung-noh.com/">Youjung Noh</a></small>
+          </p>
+          <p id="clickformore"><small>read more...</small></p>
         </div>
         <div class="stick"></div>
       </div>
     </div>
     <script src="./js/mountain.js"></script>
-    <script src="./js/language.js"></script>
+    <!-- <script src="./js/language.js"></script> -->
   </body>
 </html>
