--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./css/mountainstyle.min.css" />
-    <title>The Ascent</title>
+    <title>Ascend a Website</title>
   </head>
   <body>
     <a href="top.html" class="button">To the top</a>
