--- a/top.html
+++ b/top.html
@@ -22,7 +22,7 @@
       </div>
       <div class="preloaded-image" style="position: absolute; top: 560px; left: 1340px">
         <img src="./images/preloaded/artwork_2.png" alt="Preloaded Image 1" width="200px" />
-        <div class="tooltip" style="display: none">돌멩이 안에 행운이 깃들어 있습니다.</div>
+        <div class="tooltip" style="display: none">돌멩이 하나에 행운이 깃들어 있다고 합니다.</div>
       </div>
       <div class="preloaded-image" style="position: absolute; top: 40px; left: 560px">
         <img src="./images/preloaded/artwork_3.png" alt="Preloaded Image 1" width="200px" />
