--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <h3>See you up there!</h3>
             <p id="p4">
               이 사이트를 애써 ‘올라가'보세요. 올라가는 길에 돌도 주워보시고요. <br />
-              ‘스크롤 다운'하는 일상 속에서 ‘스크롤 업'을 해낸 당신만의 경험을과 <br />
+              ‘스크롤 다운'하는 일상 속에서 ‘스크롤 업'을 해낸 당신만의 경험과 <br />
               생기(生氣)를 돌탑으로 표현해 남겨주세요. 우리 저기 위에서 만납시다. 
             </p>
           </div>
@@ -213,6 +213,11 @@
         </div>
         <div class="stick"></div>
       </div>
+    </div>
+    <div class="mobile-message">
+      ⸜( ⌓̈ )⸝ <br />
+      이 웹사이트는 데스크탑에서만 사용할 수 있습니다. <br />
+      This website is only accessible on a desktop.
     </div>
     <script src="./js/mountain.js"></script>
     <!-- <script src="./js/language.js"></script> -->
