--- a/top.html
+++ b/top.html
@@ -15,6 +15,10 @@
       <button id="closeCanvasBtn">Close</button>
       <button id="goDown">Go Down</button>
     </div>
+    <div class="slide">
+      <small>more here</small>
+      <div>⇢</div>
+    </div>
     <div id="collection">
       <div class="preloaded-image" style="position: absolute; top: 200px; left: 50px">
         <img src="./images/preloaded/artwork_1.png" alt="Preloaded Image 1" width="200px" />
