1105 이제 마무리 해도 될 것 같아...

--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@
             <div></div>
           </div>
           <h2>Ascend a Website</h2>
-          <!-- <div class="language-switcher">
-            <button id="lang-ko">[ 한국어 ]</button>
-            <button id="lang-en">[ English ]</button>
-          </div> -->
+          <div class="language-switcher">
+            <button id="lang-ko"><small>[KR]</small></button>
+            <button id="lang-en"><small>[EN]</small></button>
+          </div>
           <div class="intro">
             <h3>Scroll Up</h3>
             <p id="p1">
@@ -220,6 +220,6 @@
       This website is only accessible on a desktop.
     </div>
     <script src="./js/mountain.js"></script>
-    <!-- <script src="./js/language.js"></script> -->
+    <script src="./js/language.js"></script>
   </body>
 </html>
