--- a/top.html
+++ b/top.html
@@ -30,11 +30,61 @@
       </div>
       <div class="preloaded-image" style="position: absolute; top: 40px; left: 560px">
         <img src="./images/preloaded/artwork_3.png" alt="Preloaded Image 1" width="200px" />
-        <div class="tooltip" style="display: none">stack 버튼을 눌러 탑을 쌓고 메세지를 남겨보세요.</div>
+        <div class="tooltip" style="display: none">꾹꾹 눌러 담은 간절한 소원</div>
       </div>
       <div class="preloaded-image" style="position: absolute; top: 440px; left: 1600px">
         <img src="./images/preloaded/artwork_4.png" alt="Preloaded Image 1" width="200px" />
         <div class="tooltip" style="display: none">₊·*◟(⌯ˇ- ˇ⌯)◜‧*・</div>
+      </div>
+      <div class="preloaded-image" style="position: absolute; top: 440px; left: 160px">
+        <img src="./images/preloaded/artwork_5.png" alt="Preloaded Image 1" width="200px" />
+        <div class="tooltip" style="display: none">...</div>
+      </div>
+      <div class="preloaded-image" style="position: absolute; top: 590px; left: 720px">
+        <img src="./images/preloaded/artwork_6.png" alt="Preloaded Image 1" width="200px" />
+        <div class="tooltip" style="display: none">행복하게 살게 해주세요 ~~ ₍ ..̮ ₎ ⁽ ˙˙̮ ⁾₍ ..̮ ₎ ⁽ ˙˙̮ ⁾</div>
+      </div>
+      <div class="preloaded-image" style="position: absolute; top: 290px; left: 890px">
+        <img src="./images/preloaded/artwork_7.png" alt="Preloaded Image 1" width="200px" />
+        <div class="tooltip" style="display: none">오잉?</div>
+      </div>
+      <div class="preloaded-image" style="position: absolute; top: 140px; left: 1140px">
+        <img src="./images/preloaded/artwork_8.png" alt="Preloaded Image 1" width="200px" />
+        <div class="tooltip" style="display: none">가깝지도 멀지도 않은 거리에서 허공을 향해 손을 잡는다.</div>
+      </div>
+      <div class="preloaded-image" style="position: absolute; top: 60px; left: 1480px">
+        <img src="./images/preloaded/artwork_9.png" alt="Preloaded Image 1" width="200px" />
+      </div>
+      <div class="preloaded-image" style="position: absolute; top: 420px; left: 1950px">
+        <img src="./images/preloaded/artwork_10.png" alt="Preloaded Image 1" width="200px" />
+        <div class="tooltip" style="display: none">천마총</div>
+      </div>
+      <div class="preloaded-image" style="position: absolute; top: 18px; left: 2400px">
+        <img src="./images/preloaded/artwork_11.png" alt="Preloaded Image 1" width="200px" />
+        <div class="tooltip" style="display: none">두 개의 돌탑에 염원해요 그대와 나의 무한한 평안을,,,</div>
+      </div>
+      <div class="preloaded-image" style="position: absolute; top: 280px; left: 2740px">
+        <img src="./images/preloaded/artwork_12.png" alt="Preloaded Image 1" width="200px" />
+        <div class="tooltip" style="display: none">돌돌돌 쌓기 재밌당</div>
+      </div>
+      <div class="preloaded-image" style="position: absolute; top: 580px; left: 2620px">
+        <img src="./images/preloaded/artwork_13.png" alt="Preloaded Image 1" width="200px" />
+        <div class="tooltip" style="display: none">돌을 쌓아 만든 우물 : 목 좀 축이고 마저 오르셔요</div>
+      </div>
+      <div class="preloaded-image" style="position: absolute; top: 560px; left: 2200px">
+        <img src="./images/preloaded/artwork_14.png" alt="Preloaded Image 1" width="200px" />
+        <div class="tooltip" style="display: none">그대가 품은 모든 물음표에 뛰어들고픈 마음. 거꾸로 자라는 나무 한 그루를 쌓아 보내요𐂷</div>
+      </div>
+      <div class="preloaded-image" style="position: absolute; top: 250px; left: 2200px">
+        <img src="./images/preloaded/artwork_15.png" alt="Preloaded Image 1" width="200px" />
+      </div>
+      <div class="preloaded-image" style="position: absolute; top: 540px; left: 400px">
+        <img src="./images/preloaded/artwork_16.png" alt="Preloaded Image 1" width="200px" />
+        <div class="tooltip" style="display: none">Now, here.</div>
+      </div>
+      <div class="preloaded-image" style="position: absolute; top: 140px; left: 1800px">
+        <img src="./images/preloaded/artwork_17.png" alt="Preloaded Image 1" width="200px" />
+        <div class="tooltip" style="display: none">내가 쌓은 돌탑처럼 차곡차곡</div>
       </div>
     </div>
     <div id="canvasPocket">
